	* libbalsa/libbalsa.c (ask_cert_real):

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Stop using GtkBox padding, fill and expand child properties

	* libbalsa/address.c (libbalsa_address_get_edit_widget):
	* libbalsa/autocrypt.c (autocrypt_db_dialog_run):
	* libbalsa/html.c (libbalsa_html_new):

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-message: Do not crash

	if the message part is changed while the find-in-message bar is
	active.

	* src/balsa-message.c (bm_find_entry_changed_cb):

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	toolbar-factory: Stop using direct access to GdkEvent structs

	Use gdk_event_get_event_type instead of directly accessing
	event->type.

	* src/toolbar-factory.c (tm_popup_context_menu_cb):

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Find in message: Make it work again

	* src/balsa-mime-widget-text.c
	(balsa_mime_widget_text_get_text_widget): new getter;
	* src/balsa-mime-widget-text.h: ditto;
	* src/balsa-message.c (bm_find_entry_changed_cb), (bm_find_again),
	(bm_find_pass_to_entry), (balsa_message_find_in_message): use it
	to get the real text widget (GtkTextView, GtkSourceView).

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mblist: Stop using direct access to GdkEvent structs

	Use GdkEvent getters instead of directly accessing fields.

	* src/balsa-mblist.c (bmbl_select_mailbox), (bmbl_mru_selected_cb):

	compose-window: Use a separate action-group for each attachment

	* src/sendmsg-window.c (remove_attachment), (add_attachment):

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	compose window: Connect to the "pressed" signal of a
	GtkGestureMultiPress instead of the "button-press-event" widget
	signal.

	* src/sendmsg-window.c (attachment_button_press_cb),
	(sw_attachment_list):

2020-06-05  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mime-widget-text: Use bmwt_html_ prefix

	for all HTML-related functions.
